@@ -1,8 +1,9 @@
+Build.PL
 Changes
-lib/Task/Sites/ShlomiFish.pm
-Makefile.PL
 MANIFEST
 META.yml # Will be created by "make dist"
 README
+lib/Task/Sites/ShlomiFish.pm
 t/00-load.t
 tag-release.pl
+META.json
