@@ -1,19 +1,79 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Task-Sites-ShlomiFish
-version:      0.0201
-version_from: lib/Task/Sites/ShlomiFish.pm
-installdirs:  site
+---
+abstract: 'Specifications for modules needed for building www.shlomifish.org , whose sources are publically available, and which serves as examples for several technologies.'
+author:
+  - 'Shlomi Fish <shlomif@iglu.org.il>'
+build_requires: {}
+configure_requires:
+  Module::Build: 0.36
+dynamic_config: 1
+generated_by: 'Module::Build version 0.3901, CPAN::Meta::Converter version 2.120921'
+license: unknown
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Task-Sites-ShlomiFish
+provides:
+  Task::Sites::ShlomiFish:
+    file: lib/Task/Sites/ShlomiFish.pm
+    version: 0.0207
 requires:
-    DateTime:                      0
-    HTML::TokeParser::Simple:      0
-    IO::All:                       0
-    Task::Latemp:                  0
-    Template::Preprocessor::TTML:  0
-    WWW::Google::SiteMap:          0
-    XML::Grammar::ProductsSyndication: 0.02
-    XML::LibXML::XPathContext:     0
-    XML::LibXSLT:                  0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30_01
+  App::XML::DocBook::Builder: 0
+  CGI: 0
+  CGI::Minimal: 0
+  Carp: 0
+  Class::Accessor: 0
+  Cwd: 0
+  DBD::SQLite: 0
+  DBI: 0
+  DateTime: 0
+  Encode: 0
+  Exporter: 0
+  Fcntl: 0
+  File::Basename: 0
+  File::Copy: 0
+  File::Find: 0
+  File::Find::Object: 0
+  File::Find::Object::Rule: 0
+  File::Path: 0
+  File::Spec: 0
+  File::Spec::Functions: 0
+  File::Which: 0
+  HTML::Tidy: 0
+  HTML::TokeParser::Simple: 0
+  HTML::TreeBuilder::LibXML: 0
+  HTML::Widgets::NavMenu::ToJSON: 0
+  HTML::Widgets::NavMenu::ToJSON::Data_Persistence::YAML: 0
+  IO::All: 0
+  Imager: 0
+  JSON: 0
+  MIME::Types: 0
+  Parallel::ForkManager: 0
+  SVG: 0
+  Spork::Shlomify: 0.0200
+  String::ShellQuote: 0
+  Task::Latemp: 0
+  Template::Preprocessor::TTML: 0
+  Term::ReadPassword: 0
+  Test::Count: 0
+  Test::Count::Filter: 0
+  Test::More: 0
+  Text::Hunspell: 0
+  Text::VimColor: 0
+  XML::Amazon: 0
+  XML::Feed: 0
+  XML::Grammar::Fiction: v0.7.0
+  XML::Grammar::Fortune: 0.0107
+  XML::Grammar::Fortune::Synd::App: 0
+  XML::Grammar::Fortune::ToText: 0
+  XML::Grammar::ProductsSyndication: 0.0302
+  XML::Grammar::Screenplay: v0.7.0
+  XML::LibXML::XPathContext: 0
+  XML::LibXSLT: 0
+  XML::Parser: 0
+  XML::Writer: 0
+  base: 0
+  strict: 0
+  utf8: 0
+  vars: 0
+  warnings: 0
+version: 0.0207
